# jms2clash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.py  install.ps1  install.sh  pyproject.toml  test_jms_to_clash.py  test_trigger.md
.github/workflows/: ci.yml  release.yml  test.yml
src/: jms_to_clash.py
